--- a/backend/package.json
+++ b/backend/package.json
@@ -9,7 +9,9 @@
     "serve": "node build/bin/www.js",
     "migrate:latest": "knex migrate:latest --knexfile ./database/knexfile.js",
     "eslint-fix": "eslint --fix src/**/*.ts*",
-    "eslint-report": "eslint src/**/* > eslint-report.txt"
+    "eslint-report": "eslint src/**/* > eslint-report.txt",
+    "test": "jest",
+    "test:watch": "jest --watch"
   },
   "dependencies": {
     "ajv": "^8.8.1",
@@ -45,6 +47,11 @@
     "supertest": "^7.1.1",
     "ts-jest": "^29.4.0",
     "typescript": "^4.9.3"
+  },
+  "jest": {
+    "testEnvironment": "node",
+    "roots": ["<rootDir>/tests"],
+    "testMatch": ["**/__tests__/**/*.js", "**/?(*.)+(spec|test).js"]
   },
   "engines": {
     "node": "14.16.0",
